nova_tests/negative_capability/errdefer_keyword_reserved.nv
// EXPECT_COMPILE_ERROR errdefer
//
// D90/D83: `errdefer` — зарезервированный keyword. Использование как
// identifier — compile error.

module negative_capability.errdefer_keyword_reserved


fn use_errdefer_as_var() -> int {
    ro errdefer = 42    // ❌ errdefer — keyword, не identifier
    errdefer
}
